# sdfa-2019

./: .flake8  .gitignore  README.md  dataset_preprocess.py  dataset_visualize.py  evaluate.sh  requirements.txt  test_render.py  vis_dg_data.py
deformation/: __init__.py
deformation/cpp/: CMakeLists.txt
saber/: __init__.py  constants.py
saber/data/mesh/deformation/cpp/: CMakeLists.txt
saber/data/mesh/deformation/cpp/src/: deform.cpp  deform.h  log.cpp  log.h  pybind.cpp
saber/data/mesh/deformation/cpp/src/rotation/: LICENSE
saber/nn/: __init__.py  functions.py
saber/trainer/: __init__.py  lr_schedulers.py
saber/utils/: __init__.py  argparser.py  bilateral.py  config_dict.py  decorators.py  extension.py  filesystem.py  log.py
saberspeech/: readme.md
saberspeech/datasets/: __init__.py  speech_anime.py
speech_anime/: __init__.py  __main__.py  api.py  readme.md
speech_anime/config/: default.py
speech_anime/datasets/: __init__.py  get_features.py  sliding_window.py
speech_anime/layers/: __init__.py  attentions.py  freq_lstm.py  lstm2d.py  misc.py  pblstm.py  rnn.py
speech_anime/model/: __init__.py  criterion.py  default.py  eval_utils.py  logger.py  model.py
speech_anime/modules/: __init__.py  configurable.py  output_module.py  speaker.py
speech_anime/tools/: __init__.py  config.py  data_info.py  data_type.py  generate.py
speech_anime/viewer/: __init__.py  frame.py  render_cpp.py  render_py.py  video.py
tool-blender/: argparse_blender.py  meshio.py  null  render.py  render.sh  render_flame.blend  script.py  utils.py
(+102 files in other folders)
